# upanapps

./: .gitignore  CMakeLists.txt  Makefile  compile.sh  depend.sh  setup.sh
crt/: Makefile  crt0.s  crti.s  crtn.s
editor/: Action.c  Action.cpp  Action.h  EView.c  EView.cpp  EView.h  Edit.c  Edit.cpp  Edit.h  Editor.c  Editor.cpp  Makefile  Makefile.act  edit  setup.sh
editor/include/: Edit.h
editor/main/: EView.c  Edit.c  Editor.c  Makefile  Makefile.act  depend.d
libc/: Makefile  Makefile.act  setup.sh  tags
libc/ctype/: Makefile  Makefile.act  ctype.c  depend.d  kb.c
libc/display/: Makefile  Makefile.act  depend.d  display.c
libc/include/: SysCall.h  abort.h  assert.h  ctype.h  display.h  drive.h  dtime.h  error.h  features.h  fs.h  kb.h  langinfo.h  limits.h  malloc.h  mcal.h  mdate.h  mosstd.h  nl_types.h  printf.h  stdarg.h  stdbool.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  tags  termios.h
libc/stdcal/: Makefile  depend.d  mcal.c  mdate.c
libc/stdio/: Makefile  Makefile.act  _fopen.c  _fwrite.c  _stdio.c  _stdio.h  asprintf.c  depend.d  fileno.c  fixme.c  fseeko.c  ftello.c  puts.c  remove.c  scanf.c  tags  vasprintf.c  vfprintf.c  vsnprintf.c
libc/stdlib/: Makefile.act  abort.c  alloc.c  depend.d  dtime.c  error.c  stdlib.c  strtod.c  tempname.c  tempname.h
libc/string/: Makefile  Makefile.act  depend.d  memcmp.c  string.c  strtok_r.c
libc/sys/: SysDisplay.c  SysDrive.c  SysFS.c  SysKB.c  SysMemory.c  SysProcess.c  SysUtil.c  depend.d
libc/sysdeps/mos/common/bits/: endian.h  errno.h  errno_values.h  float.h  uClibc_locale.h  uClibc_stdio.h
libc/sysdeps/mos/common/sys/: types.h
libgcceh/: tsystem.h
libit/: Makefile  it.c  setup.sh
libm/: Makefile  Makefile.act  Makefile.act.link  depend.d  k_standard.c  setup.sh  tags
libmcal/: Makefile  Makefile.act  a.out  mcal.c  mdate.c  sam.cpp  setup.sh  tags  test.c
libmcal/include/: mcal.h  mdate.h
libmcal/main/: Makefile  Makefile.act  depend.d  mdate.c
libmterm/: 1  MTerm.c  MTerm.cpp  Makefile  Makefile.act  setup.sh
libmterm/include/: MTerm.h
libmterm/main/: MTerm.c  Makefile  Makefile.act  depend.d
nasm/: Makefile  Makefile.act  nasm  ndisasm  setup.sh
nasm/include/: insnsi.h  nasm.h  regs.h
nasm/include/rdoff/: rdoff.h
nasm/main/: Makefile  Makefile.act  depend.d  insnsn.c  nasm.c  nasm.man  ndisasm.c  ndisasm.man  regdis.c  regflags.c  sync.c  tags
nasm/main/output/: depend.d
nasm/main/rdoff/: rdflib.c  rdlar.c
nasm/nasm_src/: assemble.c  labels.c  macros.c  nasm.c  nasmlib.c  outcoff.c  outieee.c  preproc.c
shell/: CommandLineParser.c  CommandLineParser.cpp  CommandLineParser.h  Makefile  Makefile.act  Msh.c  Msh.cpp  Msh.h  MshCommandExecutor.cpp  MshCommandExecutor.h  MshCommands.c  MshCommands.cpp  MshCommands.h  MshMain.cpp  setup.sh
shell/main/: CommandLineParser.h  Makefile  Msh.h  MshCommands.c  depend.d
